src/objects/MMCONT_RELATIONS_JOBS__c.object
<CustomObject>
    <description>(MBI) - MMD - Contact Jobs at Other Relationships</description>
    <fields>
        <fullName>CONTID__c</fullName>
        <label>Contact MMD ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Relation__c</fullName>
        <label>Contact Relation</label>
        <referenceTo>MMCONT_RELATIONS__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>MMD_Contact_Relation_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JOB_CODE__c</fullName>
        <label>Job Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REL_PID__c</fullName>
        <label>Related Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Firm Name</label>
        <type>Text</type>
    </fields>
    <label>MMD Contact Relation Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Contact Relation Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>